alsa-config: Avoid changing aliases.conf
Change-Id: Ibd870cc14437fc3eb864a51f5df3b7c3cb6efe4c
Signed-off-by: Jeffy Chen <jeffy.chen@rock-chips.com>

--- a/cards/rockchip_rk817-.conf
+++ b/cards/rockchip_rk817-.conf
@@ -1,9 +1,11 @@
 #
-# Configuration for PC-Speaker driver
+# Configuration for RK817 driver
 #
 
+rockchip_rk817- cards.rk817
+
 # default with softvol
-rk809.pcm.default {
+rk817.pcm.default {
         @args [ CARD ]
         @args.CARD {
                 type string
