--- a/cards/rockchip_rk809-.conf
+++ b/cards/rockchip_rk809-.conf
@@ -1,9 +1,11 @@
 #
-# Configuration for PC-Speaker driver
+# Configuration for RK809 driver
 #
 
+rockchip_rk809- cards.rk809
+
 # default with softvol
-rk817.pcm.default {
+rk809.pcm.default {
         @args [ CARD ]
         @args.CARD {
                 type string
