--- a/drivers/media/i2c/Makefile
+++ b/drivers/media/i2c/Makefile
@@ -151,6 +151,8 @@ obj-$(CONFIG_VIDEO_LT6911UXC)	+= lt6911uxc.o
 obj-$(CONFIG_VIDEO_LT7911D)	+= lt7911d.o
 obj-$(CONFIG_VIDEO_LT8619C)	+= lt8619c.o
 obj-$(CONFIG_VIDEO_IMX178)	+= imx178.o
+obj-$(CONFIG_VIDEO_IMX214)	+= imx214.o
+obj-$(CONFIG_VIDEO_IMX214_EEPROM)	+= imx214_eeprom.o
 obj-$(CONFIG_VIDEO_IMX219)	+= imx219.o
 obj-$(CONFIG_VIDEO_IMX258)	+= imx258.o
 obj-$(CONFIG_VIDEO_IMX258_EEPROM)	+= imx258_eeprom.o
