samples: Fix wrong reference graphicbuffer.h when compiling NDK
Signed-off-by: Yu Qiaowei <cerf.yu@rock-chips.com>
Change-Id: I11ddac4dca5f1a5de2710da4b78f2b66f4be7f61

--- a/samples/allocator_demo/CMakeLists.txt
+++ b/samples/allocator_demo/CMakeLists.txt
@@ -32,5 +32,7 @@ if (NOT DEFINED RGA_SAMPLES_UTILS_COMPILED)
     include(${CMAKE_CURRENT_SOURCE_DIR}/../utils/CMakeLists.txt)
 endif()
 
+string(REPLACE "-DANDROID" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+
 add_subdirectory(src)
 
