--- a/arch/arm64/boot/dts/rockchip/rk3358-linux.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3358-linux.dtsi
@@ -24,6 +24,15 @@
 		status = "okay";
 	};
 
+	ramoops {
+		compatible = "ramoops";
+		record-size = <0x0 0x20000>;
+		console-size = <0x0 0x80000>;
+		ftrace-size = <0x0 0x00000>;
+		pmsg-size = <0x0 0x00000>;
+		memory-region = <&ramoops_mem>;
+	};
+
 	reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
@@ -32,6 +41,11 @@
 		drm_logo: drm-logo@00000000 {
 			compatible = "rockchip,drm-logo";
 			reg = <0x0 0x0 0x0 0x0>;
+		};
+
+		ramoops_mem: ramoops@110000 {
+			reg = <0x0 0x110000 0x0 0xf0000>;
+			reg-names = "ramoops_mem";
 		};
 	};
 };
