--- a/arch/arm64/boot/dts/rockchip/Makefile
+++ b/arch/arm64/boot/dts/rockchip/Makefile
@@ -143,6 +143,12 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399pro-evb-v14-linux.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399pro-evb-v14-multi-cam-avb.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399pro-npu-evb-v10.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399pro-npu-evb-v10-multi-cam.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-khadas-edge-linux.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-khadas-edgev-linux.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-khadas-edgev-mipi-linux.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-khadas-captain-linux.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3399-khadas-captain-mipi-linux.dtb
+
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
