--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -563,6 +563,11 @@ config GPIO_DET
 	bool "gpio detection driver"
 	help
 	  Enable this driver will support gpio detection.
+	  
+config KHADAS_MCU
+	tristate "Khadas MCU control driver"
+	help
+	  This driver allow to control MCU
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
